fixed form input spacing

--- a/client/styles/css/home-styles.css
+++ b/client/styles/css/home-styles.css
@@ -100,10 +100,6 @@
 	width: 100%;
 }
 
-form.ui {
-	padding: 1rem;
-}
-
 .room-list-container {
 	width: 100%;
 	height: 100%;
